<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".FeedbackActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|start"
        android:hint="@string/topic_feedback"
        android:inputType="textEmailSubject"
        android:visibility="gone"
        android:paddingHorizontal="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|start"
        android:hint="@string/email_feedback"
        android:visibility="gone"

        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgFA"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center|start"
        android:hint="@string/feedback"
        android:visibility="gone"

        android:paddingHorizontal="16dp" />


    <Button
        android:id="@+id/sendFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:text="@string/send"
        android:visibility="gone"

        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linearLayoutNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/mask_cyan"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:text="@string/author"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:text="直接告诉我就好"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>