<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffleBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                android:drawableTop="@drawable/shuffle_icon"
                android:text="@string/shuffle_btn"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/favouriteBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites_btn"
                android:drawableTop="@drawable/favourite_icon"
                android:text="@string/favourites_btn"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/playlistBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                android:drawableTop="@drawable/playlist_icon"
                android:text="@string/playlist_btn"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/totalSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/musicRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>