<?xml version="1.0" encoding="utf-8"?>

<!--
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:strokeColor="@color/blue"
    app:strokeWidth="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_marginTop="5dp"
        android:id="@+id/playlistImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/music_player"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/playlist_name"
        android:textColor="@color/black"
        android:textSize="18sp" />


</com.google.android.material.card.MaterialCardView>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:src="@mipmap/music_player_icon"
        app:shapeAppearanceOverlay="@style/curved_photo" />

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/moreInfoMV"
        android:layout_toEndOf="@id/playlistImg"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/songAlbumMV"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_toStartOf="@+id/moreInfoMV"
        android:layout_toEndOf="@id/playlistImg"
        android:text="@string/song_album"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/moreInfoMV"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_btn"
        android:padding="5dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/more_icon"
        app:tint="@color/mask_green" />

</RelativeLayout>
