<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cool_green"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="32dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playlist_btn"
            android:gravity="center"
            android:text="@string/playlist_btn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:singleLine="true"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="5dp"
            android:src="@drawable/more_icon"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/cool_green"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="100dp"
            android:padding="8dp"
            android:layout_height="100dp"
            android:src="@drawable/music_player" />

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center|start"
            android:textStyle="bold"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="90dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDetails"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:visibility="visible"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="@color/mask_cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeColor="@color/mask_cyan"
        app:strokeWidth="2dp" />


    <!--for buttons-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--Add Button-->
        <Button
            android:id="@+id/addBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <!--Remove Button-->
        <Button
            android:id="@+id/removeAllPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>